# tokenizer-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
tokenizer_adapter/: adapter.py
