[metadata]
name = tokenizer-adapter
version = 0.1.2
author = Charles Condevaux
author_email = charles.condevaux@gmail.com
description = A simple to adapt a pretrained language model to a new vocabulary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccdv-ai/tokenizer-adapter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 
    torch>=1.8
    tokenizers>=0.15.0
    tqdm
    